create StockHoldingService